# ECG_inversion_classification_api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: docker-publish-ecg-app.yml  docker-publish-ecg-streamlit.yml
app/: ModelPredict.py
app/exceptions/: ServerError.py
app/models/: ecg_inversion_model.h5
app/models/ecg_inversion_model.tf/: fingerprint.pb  keras_metadata.pb  saved_model.pb
app/models/ecg_inversion_model.tf/variables/: variables.data-00000-of-00001  variables.index
app/notebooks/: ECG_Inversion_detection.ipynb
ecg_app/: Dockerfile  main.py  pyproject.toml  requirements.txt
ecg_app/app/: Service.py
ecg_app/app/data_model/: Inversion.py
ecg_app/app/exceptions/: ModelPredictError.py
ecg_app/app/utils/: DataHandler.py
ecg_app/notebooks/: ECG_Inversion_detection.ipynb
ecg_streamlit/: Dockerfile  ecg_streamlit.py  pyproject.toml  requirements.txt
ecg_streamlit/tmp/: tmp.csv
model_experiments/: .pre-commit-config.yaml  pyproject.toml
notebooks/: ECG_Inversion_detection.ipynb
tests/: test_main.py
