[tool.poetry]
name = "ecg-inv-model"
version = "0.1.0"
description = "Model experimenting for ECG inversion detection."
authors = ["Youcef Kharroubi <ucef.kharroubi@gmail.com>"]
license = "MIT Licence."
readme = "README.md"
packages = [{include = "ecg_inv_model"}]

[tool.poetry.dependencies]
python = "~3.9.16"
tensorflow = "^2.13.0"
numpy = "~1.24"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
pre-commit = "^3.3.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pylint = "^2.17.5"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
