[tool.poetry]
name = "ecg-inv-model"
version = "0.1.0"
description = "Model experimenting for ECG inversion detection."
authors = ["Youcef Kharroubi <ucef.kharroubi@gmail.com>"]
license = "MIT Licence."
readme = "README.md"
packages = [{include = "ecg_inv_model"}]

[tool.poetry.dependencies]
python = "~3.9.16"
tensorflow = "^2.13.0"
numpy = "~1.24"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
pre-commit = "^3.3.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pylint = "^2.17.5"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit=["tests/*", "data/*", "output/*"]


[tool.black]
line-length = 100

[tool.pylint.design]
max-args = 6  # Default: 5
max-attributes = 15  # Default: 7
max-bool-expr = 5
max-branches = 12
max-locals = 15
max-parents = 7
max-public-methods = 20
max-returns = 6
max-statements = 50
min-public-methods = 0

[tool.pylint.format]
max-line-length = 100
max-module-lines = 1000

[tool.pylint.imports]
allow-wildcard-with-all = true

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "similarities",
    "redefined-outer-name",
    "import-error",
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "logging-fstring-interpolation",
    "logging-not-lazy",
    "fixme",
    "invalid-name",
    "consider-using-enumerate",
    "unspecified-encoding",
    "try-except-raise",
    "raise-missing-from",
    "consider-using-dict-items",
]
