[tool.poetry]
name = "ecg-inversion-classification-api"
version = "0.1.0"
description = "Detecting electrode inversion in an ECG"
authors = ["Youcef Kharroubi <ucef.kharroubi@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "ecg_inversion_classification_api"}]

[tool.poetry.dependencies]
python = "^3.9.16"
pandas = "^2.0.3"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
